# browser-fetch-router

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  gemini-extension.json  pyproject.toml  pytest.ini
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/workflows/: tests.yml
.opencode/: INSTALL.md
.opencode/plugins/: browser-fetch-router.js
.specify/: feature.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: generic.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
browser_fetch_router/: __main__.py  acceptance.py  approvals.py  audit.py  cache.py  cdp.py  cli.py  cost.py  default_deny.py  doctor.py  env_allowlist.py  http_client.py  install_agent.py  interactive.py  lifecycle.py  paths.py  quality.py  read_user_tabs.py  read_web.py  schema.py  session.py  status.py  url_safety.py
browser_fetch_router/adapters/claude/: SKILL.md
browser_fetch_router/adapters/codex/: SKILL.md
browser_fetch_router/adapters/gemini/: SKILL.md
browser_fetch_router/adapters/kimi/: SKILL.md
browser_fetch_router/adapters/opencode/: SKILL.md
browser_fetch_router/adapters/pi/: SKILL.md
browser_fetch_router/providers/: browser_use_cloud.py  browserbase_stagehand.py  fxtwitter.py  jina.py  parallel.py  reddit.py
browser_fetch_router/schemas/: v1.json
docs/: browser-fetch-router-approvals-contract.md  browser-fetch-router-audit-redaction-contract.md  browser-fetch-router-cli-write-containment-contract.md  browser-fetch-router-http-transport-contract.md  browser-fetch-router-install-agent-contract.md  browser-fetch-router-interactive-browser-contract.md  browser-fetch-router-lifecycle-contract.md  browser-fetch-router-persistence-contract.md  browser-fetch-router-read-web-contract.md
skills/browser-fetch-router/: SKILL.md
skills/interactive-browser/: SKILL.md
skills/read-user-tabs/: SKILL.md
skills/read-web/: SKILL.md
specs/001-authenticated-browser-cdp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-install-agent-readiness/: data-model.md  plan.md  quickstart.md  research.md  root-cause.md  spec.md  tasks.md
specs/003-browser-reliability/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/browser_fetch_router/: conftest.py  test_acceptance_contract.py  test_approvals.py  test_approvals_contract.py  test_audit.py  test_browser_reliability_cli.py  test_browser_reliability_providers.py  test_browser_use_cloud.py  test_browserbase_stagehand.py  test_cache.py  test_cdp.py  test_cli_contract.py  test_cost.py  test_default_deny.py  test_http_client.py  test_http_transport_contract.py  test_install_agent.py  test_interactive.py  test_lifecycle.py  test_lifecycle_contract.py  test_paths.py  test_persistence_contract.py  test_quality.py  test_read_user_tabs.py  test_read_web.py  test_round14_replication.py  test_round15_replication.py  test_round17_replication.py  test_round3_replication.py  test_round5_replication.py  test_round6_replication.py  test_url_safety.py
(+8 files in other folders)
